--- a/projects.html
+++ b/projects.html
@@ -515,10 +515,10 @@
                                   <div class="point-popup">
                                     <h6>
                                       PT Insani Bara Prakasa<br>
-                                      1. Lokasi : <br><br>
-                                      2. Simpang Pasir<br>
-                                      3. Purwajaya<br>
-                                      4. Tani Bakti<br>
+                                       Lokasi : <br><br>
+                                      1. Simpang Pasir<br>
+                                      2. Purwajaya<br>
+                                      3. Tani Bakti<br>
                                     </h6>
                                   </div>
                                   </span>
