--- a/projects.html
+++ b/projects.html
@@ -485,7 +485,7 @@
                             <div class="close blue"></div>
                             <div class="point-popup">
                               <h6>
-                                PT Insani Bara Perkasi<br>
+                                PT Insani Bara Perkasa<br>
                                 Lokasi : Blok Separi Lengan Barat
                               </h6>
                             </div>
@@ -598,20 +598,17 @@
                             PT Insani Bara Perkasa
                           </h5>
                           <h6>
-                            Lokasi :<br>
-                            1. Blok Separi Lengan Barat<br>
-                            2. Blok Simpang Pasir<br>
-                            3. Blok Purwajaya<br>
-                            4. Blok Tani Bakti<br>
-                            5. Perangat<br>
-                            Lokasi : Berambai, Blok Separi Selatan
+                            Lokasi : <br><br>
+                            1. Simpang Pasir<br>
+                            2. Purwajaya<br>
+                            3. Tani Bakti<br>
                           </h6>
                         </div>
                         <div class="col-lg-12">
                           <img class="mb-4" src="images/pyss-16.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">1/9</h6>
+                      <h6 class="text-center my-5">1/10</h6>
                     </div>
                     <div class="item">
                       <div class="row pt-4">
@@ -633,7 +630,7 @@
                           <img class="mb-4" src="images/pyss-17.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">2/9</h6>
+                      <h6 class="text-center my-5">2/10</h6>
                     </div>
                     <div class="item">
                       <div class="row pt-4">
@@ -655,29 +652,7 @@
                           <img class="mb-4" src="images/pyss-18.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">3/9</h6>
-                    </div>
-                    <div class="item">
-                      <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
-                          <h6 class="text-dark-blue">
-                            Proyek
-                          </h6>
-                          <h5 class="text-dark-blue">
-                            PT Kumala Sakti Permai
-                          </h5>
-                          <h6>
-                            Lokasi : Kalimantan Timur
-                          </h6>
-                        </div>
-                        <div class="col-lg-12">
-                          <img class="mb-4" src="images/pyss-19.png" alt="">
-                        </div>
-                      </div>
-                      <h6 class="text-center my-5">4/9</h6>
+                      <h6 class="text-center my-5">3/10</h6>
                     </div>
                     <div class="item">
                       <div class="row pt-4">
@@ -699,7 +674,7 @@
                           <img class="mb-4" src="images/pyss-20.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">5/9</h6>
+                      <h6 class="text-center my-5">4/10</h6>
                     </div>
                     <div class="item">
                       <div class="row pt-4">
@@ -721,7 +696,7 @@
                           <img class="mb-4" src="images/pyss-21.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">6/9</h6>
+                      <h6 class="text-center my-5">5/10</h6>
                     </div>
                     <div class="item">
                       <div class="row pt-4">
@@ -743,7 +718,7 @@
                           <img class="mb-4" src="images/pyss-22.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">7/9</h6>
+                      <h6 class="text-center my-5">6/10</h6>
                     </div>
                     <div class="item">
                       <div class="row pt-4">
@@ -765,7 +740,7 @@
                           <img class="mb-4" src="images/pyss-23.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">8/9</h6>
+                      <h6 class="text-center my-5">7/10</h6>
                     </div>
                     <div class="item">
                       <div class="row pt-4">
@@ -787,7 +762,51 @@
                           <img class="mb-4" src="images/pyss-24.png" alt="">
                         </div>
                       </div>
-                      <h6 class="text-center my-5">9/9</h6>
+                      <h6 class="text-center my-5">8/10</h6>
+                    </div>
+                    <div class="item">
+                      <div class="row pt-4">
+                        <div class="col-3 offset-1">
+                          <i class="font-80 fas fa-circle text-dark-blue"></i>
+                        </div>
+                        <div class="col-7 pl-2 pt-2 pb-5">
+                          <h6 class="text-dark-blue">
+                            Proyek
+                          </h6>
+                          <h5 class="text-dark-blue">
+                            PT Insani Bara Perkasa
+                          </h5>
+                          <h6>
+                            Blok Separi Lengan Barat
+                          </h6>
+                        </div>
+                        <div class="col-lg-12">
+                          <img class="mb-4" src="images/pyss-25.png" alt="">
+                        </div>
+                      </div>
+                      <h6 class="text-center my-5">9/10</h6>
+                    </div>
+                    <div class="item">
+                      <div class="row pt-4">
+                        <div class="col-3 offset-1">
+                          <i class="font-80 fas fa-circle text-dark-blue"></i>
+                        </div>
+                        <div class="col-7 pl-2 pt-2 pb-5">
+                          <h6 class="text-dark-blue">
+                            Proyek
+                          </h6>
+                          <h5 class="text-dark-blue">
+                            PT Insani Bara Perkasa
+                          </h5>
+                          <h6>
+                            Perangat, Kalimantan Timur
+                          </h6>
+                        </div>
+                        <div class="col-lg-12">
+                          <img class="mb-4" src="images/pyss-26.png" alt="">
+                        </div>
+                      </div>
+                      <h6 class="text-center my-5">10/10</h6>
                     </div>
                   </div>
                 </div>
