--- a/projects.html
+++ b/projects.html
@@ -288,10 +288,7 @@
                   <div class="carousel-mobile-projects-list owl-theme" data-aos="fade-up">
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -308,10 +305,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -328,10 +322,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -348,10 +339,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -373,10 +361,7 @@
                   <div class="carousel-mobile-projects-list owl-theme" data-aos="fade-up">
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-orange"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-orange">
                             Kantor
                           </h6>
@@ -397,10 +382,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-orange"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-orange">
                             Kantor
                           </h6>
@@ -421,10 +403,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-orange"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-orange">
                             Kantor
                           </h6>
@@ -587,10 +566,7 @@
                   <div class="carousel-mobile-projects-list owl-theme" data-aos="fade-up">
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -612,10 +588,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -634,10 +607,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -656,10 +626,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -678,10 +645,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -700,10 +664,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -722,10 +683,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -744,10 +702,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -766,10 +721,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
@@ -788,10 +740,7 @@
                     </div>
                     <div class="item">
                       <div class="row pt-4">
-                        <div class="col-3 offset-1">
-                          <i class="font-80 fas fa-circle text-dark-blue"></i>
-                        </div>
-                        <div class="col-7 pl-2 pt-2 pb-5">
+                        <div class="col-7 offset-1 pl-2 pt-2 pb-5">
                           <h6 class="text-dark-blue">
                             Proyek
                           </h6>
