--- a/about.html
+++ b/about.html
@@ -561,23 +561,23 @@
           </h2>
           <div class="row my-lg-5 d-none d-lg-flex">
             <div class="col-lg-4">
-              <img src="images/about-dewan-content-02.jpg" alt="">
+              <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
             </div>
             <div class="col-lg-4">
-              <img src="images/about-dewan-content-02.jpg" alt="">
+              <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
             </div>
             <div class="col-lg-4">
-              <img src="images/about-dewan-content-02.jpg" alt="">
+              <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
           <div class="row d-lg-none">
             <div class="col-lg-12 pl-0">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
-                  <img src="images/about-dewan-content-02.jpg" alt="">
+                  <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
                 </div>
                 <div class="item">
-                  <img src="images/about-dewan-content-02.jpg" alt="">
+                  <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
                 </div>
               </div>
             </div>
@@ -594,20 +594,20 @@
           </h2>
           <div class="row my-lg-5 d-none d-lg-flex">
             <div class="col-lg-4">
-              <img src="images/about-dewan-content-02.jpg" alt="">
+              <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
             </div>
             <div class="col-lg-4">
-              <img src="images/about-dewan-content-02.jpg" alt="">
+              <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
           <div class="row mt-5 d-lg-none">
             <div class="col-lg-12 pl-0">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
-                  <img src="images/about-dewan-content-02.jpg" alt="">
+                  <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
                 </div>
                 <div class="item">
-                  <img src="images/about-dewan-content-02.jpg" alt="">
+                  <img class="img-thumbnail" src="images/about-dewan-content-02.jpg" alt="">
                 </div>
               </div>
             </div>
