--- a/career.html
+++ b/career.html
@@ -167,7 +167,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid bg-light-gray py-5">
+    <div class="container-fluid bg-light-gray py-5 d-none">
       <div class="row py-5">
         <div class="col-lg-5 pl-lg-0 p-4">
           <img class="w-100 img-fluid px-lg-0 px-3 mb-lg-0 mb-4" src="images/career-img-content-03.jpg" alt=""/>
