--- a/businesses.html
+++ b/businesses.html
@@ -173,7 +173,7 @@
             <div class="tab-pane py-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
               <div class="d-lg-flex pt-5 mt-lg-5">
                 <div class="col-lg-7 col-12 pl-lg-0" data-aos="fade-up">
-                  <img class="img-fluid w-100" src="images/business-image-placement-07.jpg" alt="">
+                  <img class="img-fluid w-100" src="images/kontrak-penambangan.jpg" alt="">
                 </div>
                 <div class="col-lg-5 col-12 details" data-aos="fade-right">
                   <p class="text-gray brief-details text-justify my-lg-0 my-5">
@@ -198,7 +198,7 @@
             <div class="tab-pane py-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
               <div class="d-lg-flex pt-5 mt-lg-5">
                 <div class="col-lg-7 col-12 pl-lg-0">
-                  <img class="img-fluid w-100" src="images/business-image-placement-07.jpg" alt="">
+                  <img class="img-fluid w-100" src="images/anak-perusahaan.jpg" alt="">
                 </div>
                 <div class="col-lg-5 col-12 details">
                   <p class="text-gray brief-details text-justify my-lg-0 my-5">
